adds the remaining diagrams

--- a/BE_Project_Report.tex
+++ b/BE_Project_Report.tex
@@ -1054,10 +1054,200 @@ Class diagrams, Interaction Diagrams, Algorithms. Description of each component 
 		\end{center} 
 	
 		\item \textbf{Video Module: }
-		\begin{itemize}
-			\item Dataset
-		\end{itemize}	
+	\begin{itemize}
+		\item \textbf{Dataset used:}\\
+		\hspace{15mm}The Cohn-Kanade AU-Coded Facial Expression Database is for research in automatic facial image analysis and synthesis and for perceptual studies. Cohn-Kanade is available in two versions and a third is in preparation.
+		\hspace{15mm}We have used the second version of this dataset, referred to as CK+. It includes both posed and non-posed (spontaneous) expressions and additional types of metadata. The target expression for each sequence is fully FACS coded. In addition validated emotion labels are present in the metadata. Thus, sequences may be analyzed for both action units and prototypic emotions. Additionally, CK+ provides protocols and baseline results for facial feature tracking and action unit and emotion recognition. 
+		\newline
+		\item \textbf{VISUAL CORPUS DISTRIBUTION:}
+		We trained on 6 emotions present in the dataset with distribution as follows:\\
+		Anger 45\\
+		Disgust 58\\
+		Happiness 69\\
+		Neutral 117\\
+		Sadness 28\\
+		Surprise 83\\
+		
+		\begin{center}
+			\begin{figure}[!htbp]
+				\centering
+				\includegraphics[width=\textwidth]{visual-corpus-distribution.png}
+				\caption{Visual Corpus Distribution}
+				\label{fig:visual_corpus_dist}
+			\end{figure}
+		\end{center}
+		
+		
+		\item \textbf{Training and Validation Report: }\\
+		Refer to figure \ref{fig:visual_learn_curv} and \ref{fig:confusion_matrix_2}
+		\begin{verbatim}
+		python \(classifier_for_metrics.py\)
+		Making sets 0
+		working on anger
+		working on disgust
+		working on happiness
+		working on neutral
+		working on sadness
+		working on surprise
+		training SVM linear 0
+		getting accuracies 0
+		linear:  0.8181818181818182
+		Making sets 1
+		working on anger
+		working on disgust
+		working on happiness
+		working on neutral
+		working on sadness
+		working on surprise
+		training SVM linear 1
+		getting accuracies 1
+		linear:  0.8181818181818182
+		Making sets 2
+		working on anger
+		working on disgust
+		working on happiness
+		working on neutral
+		working on sadness
+		working on surprise
+		training SVM linear 2
+		getting accuracies 2
+		linear:  0.7922077922077922
+		Making sets 3
+		working on anger
+		working on disgust
+		working on happiness
+		working on neutral
+		working on sadness
+		working on surprise
+		training SVM linear 3
+		getting accuracies 3
+		linear:  0.8701298701298701
+		Making sets 4
+		working on anger
+		working on disgust
+		working on happiness
+		working on neutral
+		working on sadness
+		working on surprise
+		training SVM linear 4
+		getting accuracies 4
+		linear:  0.8051948051948052
+		Making sets 5
+		working on anger
+		working on disgust
+		working on happiness
+		working on neutral
+		working on sadness
+		working on surprise
+		training SVM linear 5
+		getting accuracies 5
+		linear:  0.8961038961038961
+		Making sets 6
+		working on anger
+		working on disgust
+		working on happiness
+		working on neutral
+		working on sadness
+		working on surprise
+		training SVM linear 6
+		getting accuracies 6
+		linear:  0.7662337662337663
+		Making sets 7
+		working on anger
+		working on disgust
+		working on happiness
+		working on neutral
+		working on sadness
+		working on surprise
+		training SVM linear 7
+		getting accuracies 7
+		linear:  0.8701298701298701
+		Making sets 8
+		working on anger
+		working on disgust
+		working on happiness
+		working on neutral
+		working on sadness
+		working on surprise
+		training SVM linear 8
+		getting accuracies 8
+		linear:  0.8441558441558441
+		Making sets 9
+		working on anger
+		working on disgust
+		working on happiness
+		working on neutral
+		working on sadness
+		working on surprise
+		training SVM linear 9
+		getting accuracies 9
+		linear:  0.7792207792207793
+		[0.8181818181818182, 0.8181818181818182, 0.7922077922077922, 0.8701298701298701, 0.8051948051948052, 0.8961038961038961, 0.7662337662337663, 0.8701298701298701, 0.8441558441558441, 0.7792207792207793]
+		Mean value lin svm: 0.825974025974026
+		[[ 6  2  0  1  0  0]
+		[ 1 10  0  0  0  0]
+		[ 0  0 13  0  0  0]
+		[ 2  0  0 16  4  1]
+		[ 1  0  0  1  3  0]
+		[ 0  0  1  1  2 12]] 
+		\end{verbatim}
+		
+		\begin{center}
+			\begin{figure}[!htbp]
+				\centering
+				\includegraphics[width=\textwidth]{visual-kfold-svm.png}
+				\caption{Learning Curve}
+				\label{fig:visual_learn_curv}
+			\end{figure}
+		\end{center} 
+		\begin{center}
+			\begin{figure}[!htbp]
+				\centering
+				\includegraphics[width=\textwidth]{visual-confusion-matrix.png}
+				\caption{Confusion Matrix}
+				\label{fig:confusion_matrix_2}
+			\end{figure}
+		\end{center} 
+		
 	\end{itemize}
+	
+	\item \textbf{Text Analysis: }
+	
+	\begin{itemize}
+		\item
+		
+		\begin{center}
+			\begin{figure}[!htbp]
+				\centering
+				\includegraphics[width=\textwidth]{text-convergence.png}
+				\caption{Text Convergence}
+				\label{fig:text-convergence}
+			\end{figure}
+		\end{center} 
+		
+		\begin{center}
+			\begin{figure}[!htbp]
+				\centering
+				\includegraphics[width=\textwidth]{text-utterance-after-combining.png}
+				\caption{Text Utterance After Combining}
+				\label{fig:text-uttr-after-comb}
+			\end{figure}
+		\end{center} 
+		
+		\begin{center}
+			\begin{figure}[!htbp]
+				\centering
+				\includegraphics[width=\textwidth]{text-confusion-matrix.png}
+				\caption{Text Confusion Matrix}
+				\label{fig:text-confusion-matrix}
+			\end{figure}
+		\end{center} 
+		
+		
+	\end{itemize}
+\end{itemize}
+
+
   
   
 \chapter{Software Testing}
