fixes ref for tone utterance diags

--- a/BE_Project_Report.tex
+++ b/BE_Project_Report.tex
@@ -914,7 +914,7 @@ Class diagrams, Interaction Diagrams, Algorithms. Description of each component 
 				
 				\vspace{10mm}
 				\item \textbf{TONE UTTERANCES BEFORE COMBINING:}
-				Refer to figure \ref{tone-utter-before}. For Tone analysis, we found that the dataset distribution was skewed.
+				Refer to figure \ref{fig:tone_utter_before}. For Tone analysis, we found that the dataset distribution was skewed.
 				\begin{itemize}
 				\item Anger 1103
 				\item Disgust 2
@@ -931,7 +931,7 @@ Class diagrams, Interaction Diagrams, Algorithms. Description of each component 
 			\end{itemize}	
 				\vspace{10mm}
 				\item \textbf{TONE UTTERANCES AFTER COMBINING:}
-				Refer to figure \ref{tone-utter-after}. To balance the dataset, we combined emotions with similar annotations:
+				Refer to figure \ref{fig:tone_utter_after}. To balance the dataset, we combined emotions with similar annotations:
 				\begin{itemize}
 					\item 	ang fru 2952
 					\item happ exc sur 1743
