--- a/BE_Project_Report.tex
+++ b/BE_Project_Report.tex
@@ -178,9 +178,9 @@ Dr. V.Y. Kulkarni (Dept. of Computer Engg.)
 		{\bfseries \fontsize{12}{12} \selectfont 'Improving Human-Computer Interaction with Machine Emotion Intelligence using NAO Robot'}.
 	\vspace*{1.5\baselineskip}
 	
-	We would like to take this opportunity to thank my internal guide and H.O.D.
+	We would like to take this opportunity to thank our internal guide and H.O.D.
 		\textbf{Dr. V.Y. Kulkarni} for giving us all the help and guidance we needed. Her valuable suggestions were extremely helpful. We would also like to express our sincere appreciation to staff of department of Computer Engineering, Maharashtra Institute of Technology Pune, for their extended help and suggestions at every stage.\\
-	In the end our special thanks to our college support staff for providing various resources such as  laboratory whenever we wanted with all needed software platforms, continuous Internet connection, and air conditioning for our project work.
+	In the end our special thanks to our college support staff for providing various resources such as  laboratory whenever we wanted with all needed software platforms, continuous internet connection, and air conditioning for our project work.
 	\vspace*{1.5\baselineskip}
 \end{center}
 
