--- a/BE_Project_Report.tex
+++ b/BE_Project_Report.tex
@@ -191,7 +191,7 @@ Dr. V.Y. Kulkarni (Dept. of Computer Engg.)
 \listoftables
 
 \begin{abstract}
-In our project, we have focused on inculcating machine emotion intelligence using the NAO robot. Emotion detetion is a challenging problem partly because it is difficult to determine the features the might be reveleant to the task, and partly because the emotive states are overlapping and not mutually exclusive. Emotional state of a person at any given time is not categorical, but a value from a wide spectrum of emotions. Thus, we have pre-defined a limited set of emotions and focused on an ensemble approach by considering the interacting human's voice, spoken content as well as facial cues to detect the emotional state. We have used a pipeline of deep neural network and extreme learning machine for tone analysis, an SVM for facial feature analysis and a neural network for analysing the spoken text. By using a weighted function, an output is mapped to a 3-D Emotion Space to produce a distinct emotion label. The robot will accept a multimodal input periodically and output the associated recognized emotion label on the user interface alongwith graphs to show the changing emotions with respect to every sample taken.
+In our project, we have focused on inculcating machine emotion intelligence using the NAO robot. Emotion detetion is a challenging problem partly because it is difficult to determine the features the might be reveleant to the task, and partly because the emotive states are overlapping and not mutually exclusive. Emotional state of a person at any given time is not categorical, but a value from a wide spectrum of emotions. Thus, we have pre-defined a limited set of emotions and focused on an ensemble approach by considering the interacting human's voice, spoken content as well as facial cues to detect the emotional state. We have used a pipeline of deep neural network for tone analysis, an SVM for facial feature analysis and a neural network for analysing the spoken text. By using a weighted function, an output is calculated from probability distributions for emotion labels predicted by all 3 modules. The robot will accept a multimodal input periodically and output the associated recognized emotion label on the user interface along with graphs to show the changing emotions with respect to every sample taken.
 \end{abstract}
 
 
