fixed statement of scope

--- a/BE_Project_Report.tex
+++ b/BE_Project_Report.tex
@@ -508,12 +508,12 @@ where,
 	
 	\item The system will accept three inputs. Out of the three inputs, two will be directly picked up by the camera and microphone on the robot.
 	\item The third input will be given to the system after undergoing a Speech-to-Text conversion.
-	\item The audio input will be approximately -- seconds long in .wav format of size -- Kb
-	\item The video frames will be captured in .jpeg format periodically after every -- seconds.
+	\item The audio input will be approximately 5 seconds long in .wav format.
+	\item The video frames will be captured every second.
 	\item After outputs are displayed, the files will be deleted to address the storage space requirement.
-	\item The system will give the output in the form of an emotion label after successful emotion recogntion.
+	\item The system will give the output in the form of an emotion label after successful emotion recognition.
 	\item However, this label will be from a pre-defined set of emotions.
-	\item For successfull Speech-to-Text conversion, steady internet connection is required.
+	\item For successful Speech-to-Text conversion, steady internet connection is required.
 	\item The system will simply display a string representing the emotion and not generate any response to address that emotion.
 	\item The output will also contain graphs which will indicate the how the emotional state of a person has changed over time.
 	\end{itemize}
